--- a/java/jetty/BUILD
+++ b/java/jetty/BUILD
@@ -25,22 +25,38 @@ container_test(
     name = "jetty_java8_debian9_test",
     configs = ["testdata/java8.yaml"],
     image = ":jetty_java8_debian9",
+    tags = [
+        "amd64",
+        "manual",
+    ],
 )
 
 container_test(
     name = "jetty_java8_debug_debian9_test",
     configs = ["testdata/java8_debug.yaml"],
     image = ":jetty_java8_debug_debian9",
+    tags = [
+        "amd64",
+        "manual",
+    ],
 )
 
 [container_test(
     name = "jetty_java11" + distro_suffix + "_test",
     configs = ["testdata/java11.yaml"],
     image = ":jetty_java11" + distro_suffix,
+    tags = [
+        "amd64",
+        "manual",
+    ],
 ) for distro_suffix in DISTRO_SUFFIXES]
 
 [container_test(
     name = "jetty_java11_debug" + distro_suffix + "_test",
     configs = ["testdata/java11_debug.yaml"],
     image = ":jetty_java11_debug" + distro_suffix,
+    tags = [
+        "amd64",
+        "manual",
+    ],
 ) for distro_suffix in DISTRO_SUFFIXES]
