--- a/java/jetty/BUILD
+++ b/java/jetty/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-load(":distro.bzl", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
