--- a/experimental/dotnet/BUILD
+++ b/experimental/dotnet/BUILD
@@ -1,14 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@package_bundle_amd64_debian9//file:packages.bzl", packages_amd64_debian9 = "packages")
-load("@package_bundle_amd64_debian10//file:packages.bzl", packages_amd64_debian10 = "packages")
-
-DISTRO_PACKAGES = {
-    "_debian9": packages_amd64_debian9,
-    "_debian10": packages_amd64_debian10,
-}
 
 DOTNET_VARIANTS = ("", "_core_aspnet", "_core_runtime", "_core_sdk")
 
@@ -33,44 +26,44 @@ DISTRO_DEBS = {
         name = "dotnet" + dotnet_variant + ("" if (not mode) else mode) + distro_suffix,
         base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + distro_suffix,
         debs = [
-            DISTRO_PACKAGES[distro_suffix]["libgssapi-krb5-2"],
-            DISTRO_PACKAGES[distro_suffix]["liblttng-ust0"],
-            DISTRO_PACKAGES[distro_suffix]["libunwind8"],
-            DISTRO_PACKAGES[distro_suffix]["libuuid1"],
-            DISTRO_PACKAGES[distro_suffix]["zlib1g"],
-            DISTRO_PACKAGES[distro_suffix]["curl"],
-            DISTRO_PACKAGES[distro_suffix]["libcomerr2"],
-            DISTRO_PACKAGES[distro_suffix]["libidn2-0"],
-            DISTRO_PACKAGES[distro_suffix]["libk5crypto3"],
-            DISTRO_PACKAGES[distro_suffix]["libkrb5-3"],
-            DISTRO_PACKAGES[distro_suffix]["libldap-2.4-2"],
-            DISTRO_PACKAGES[distro_suffix]["libldap-common"],
-            DISTRO_PACKAGES[distro_suffix]["libsasl2-2"],
-            DISTRO_PACKAGES[distro_suffix]["libnghttp2-14"],
-            DISTRO_PACKAGES[distro_suffix]["libpsl5"],
-            DISTRO_PACKAGES[distro_suffix]["librtmp1"],
-            DISTRO_PACKAGES[distro_suffix]["libssh2-1"],
-            DISTRO_PACKAGES[distro_suffix]["libkeyutils1"],
-            DISTRO_PACKAGES[distro_suffix]["libkrb5support0"],
-            DISTRO_PACKAGES[distro_suffix]["libgnutls30"],
-            DISTRO_PACKAGES[distro_suffix]["libgmp10"],
-            DISTRO_PACKAGES[distro_suffix]["libhogweed4"],
-            DISTRO_PACKAGES[distro_suffix]["libidn11"],
-            DISTRO_PACKAGES[distro_suffix]["libnettle6"],
-            DISTRO_PACKAGES[distro_suffix]["libp11-kit0"],
-            DISTRO_PACKAGES[distro_suffix]["libffi6"],
-            DISTRO_PACKAGES[distro_suffix]["libtasn1-6"],
-            DISTRO_PACKAGES[distro_suffix]["libsasl2-modules-db"],
-            DISTRO_PACKAGES[distro_suffix]["libdb5.3"],
-            DISTRO_PACKAGES[distro_suffix]["libgcrypt20"],
-            DISTRO_PACKAGES[distro_suffix]["libgpg-error0"],
-            DISTRO_PACKAGES[distro_suffix]["libacl1"],
-            DISTRO_PACKAGES[distro_suffix]["libattr1"],
-            DISTRO_PACKAGES[distro_suffix]["libselinux1"],
-            DISTRO_PACKAGES[distro_suffix]["libpcre3"],
-            DISTRO_PACKAGES[distro_suffix]["libbz2-1.0"],
-            DISTRO_PACKAGES[distro_suffix]["liblzma5"],
-        ] + [DISTRO_PACKAGES[distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libgssapi-krb5-2"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["liblttng-ust0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libunwind8"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libuuid1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["zlib1g"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["curl"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libcomerr2"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libidn2-0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libk5crypto3"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libkrb5-3"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libldap-2.4-2"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libldap-common"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libsasl2-2"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libnghttp2-14"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libpsl5"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["librtmp1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libssh2-1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libkeyutils1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libkrb5support0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libgnutls30"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libgmp10"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libhogweed4"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libidn11"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libnettle6"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libp11-kit0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libffi6"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libtasn1-6"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libsasl2-modules-db"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libdb5.3"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libgcrypt20"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libgpg-error0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libacl1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libattr1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libselinux1"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libpcre3"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["libbz2-1.0"],
+            DISTRO_PACKAGES["amd64"][distro_suffix]["liblzma5"],
+        ] + [DISTRO_PACKAGES["amd64"][distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
         entrypoint = [
             #"/opt/dotnet/dotnet",
         ],
