--- a/java/BUILD
+++ b/java/BUILD
@@ -1,19 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
+load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@io_bazel_rules_docker//java:image.bzl", "java_image")
-load("@package_bundle_amd64_debian9//file:packages.bzl", packages_amd64_debian9 = "packages", versions_amd64_debian9 = "versions")
-load("@package_bundle_amd64_debian10//file:packages.bzl", packages_amd64_debian10 = "packages", versions_amd64_debian10 = "versions")
+load("@package_bundle_amd64_debian9//file:packages.bzl", versions_amd64_debian9 = "versions")
+load("@package_bundle_amd64_debian10//file:packages.bzl", versions_amd64_debian10 = "versions")
 load("//cacerts:java.bzl", "cacerts_java")
 load("//java:jre_ver.bzl", "jre_ver")
-
-DISTRO_SUFFIXES = ("_debian9", "_debian10")
-
-DISTRO_PACKAGES = {
-    "_debian9": packages_amd64_debian9,
-    "_debian10": packages_amd64_debian10,
-}
 
 DISTRO_VERSIONS = {
     "_debian9": versions_amd64_debian9,
@@ -24,16 +18,16 @@ DISTRO_VERSIONS = {
     name = "java_base" + mode + distro_suffix,
     base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + distro_suffix,
     debs = [
-        DISTRO_PACKAGES[distro_suffix]["zlib1g"],
-        DISTRO_PACKAGES[distro_suffix]["libjpeg62-turbo"],
-        DISTRO_PACKAGES[distro_suffix]["libpng16-16"],
-        DISTRO_PACKAGES[distro_suffix]["liblcms2-2"],
-        DISTRO_PACKAGES[distro_suffix]["libfreetype6"],
-        DISTRO_PACKAGES[distro_suffix]["fonts-dejavu-core"],
-        DISTRO_PACKAGES[distro_suffix]["fontconfig-config"],
-        DISTRO_PACKAGES[distro_suffix]["libexpat1"],
-        DISTRO_PACKAGES[distro_suffix]["libfontconfig1"],
-        DISTRO_PACKAGES[distro_suffix]["libuuid1"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["zlib1g"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libjpeg62-turbo"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libpng16-16"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["liblcms2-2"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libfreetype6"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["fonts-dejavu-core"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["fontconfig-config"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libexpat1"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libfontconfig1"],
+        DISTRO_PACKAGES["amd64"][distro_suffix]["libuuid1"],
     ],
     env = {
         "LANG": "C.UTF-8",
@@ -50,7 +44,7 @@ DISTRO_VERSIONS = {
 [container_image(
     name = rule_name + distro_suffix,
     base = ":java_base" + ("_debug" if ("debug" in rule_name) else "") + distro_suffix,
-    debs = [DISTRO_PACKAGES[distro_suffix][deb] for deb in java_debs],
+    debs = [DISTRO_PACKAGES["amd64"][distro_suffix][deb] for deb in java_debs],
     # We expect users to use:
     # cmd = ["/path/to/deploy.jar", "--option1", ...]
     entrypoint = [
